# assets

./: README.md
PiBot/: README.md
PiBot/printable_pieces/: back_support.fcstd  back_support.stl  chassis.stl  dc_board_place.fcstd  dc_board_place.stl  picam.fcstd  picam.stl  raspberry_base.stl
drones/: README.md
gazebo/: CMakeLists.txt
gazebo/launch/: iris_1_roadtexturesROS.launch
gazebo/models/amazon_warehouse_robot/: model.sdf
gazebo/models/f1_renault/Renault/: Car.mtl
gazebo/worlds/: amazonrobot_1_warehouse.world  iris_1_labyrinthROS.world
jderobot_assets/: CHANGELOG.rst  CMakeLists.txt  cpackit.cmake  package.xml
jderobot_assets/models/color_beacon/: model.config  model.sdf
jderobot_assets/models/color_beacon/materials/scripts/: color_beacon.material
jderobot_assets/models/color_beacon_box/: model.config  model.sdf
jderobot_assets/models/simple_labyrinth/: model.config
jderobot_assets/perspectives/: drone_and_ground_robot_teleop.perspective  drone_teleop.perspective
jderobot_assets/worlds/: f1_1_simplecircuit.world  iris_drone_hangar.world  iris_follow_road.world  iris_follow_turtlebot.world  iris_labyrinth.world  iris_position_control.world  iris_rescue_people.world  iris_visual_lander.world
