<?xml version="1.0"?>
<package format="2">
  <name>jderobot_assets</name>
  <version>0.0.2</version>
  <description>The jderobot_assets package</description>

  <maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>
  <author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
