<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>

<!-- Updates According to Package format 3 https://www.ros.org/reps/rep-0149.html -->
<package format="3">

  <name>jderobot_assets</name>
  <version>1.0.3</version>
  <description>The jderobot_assets package</description>

  <maintainer email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</maintainer>
  <author email="nikhilvkhedekar@gmail.com">Nikhil Khedekar</author>

  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />

  </export>
</package>
